testdata/baselines/reference/submodule/conformance/emitArrowFunctionWhenUsingArguments17_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
emitArrowFunctionWhenUsingArguments17_ES6.ts(3,9): error TS2304: Cannot find name 'Math'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== emitArrowFunctionWhenUsingArguments17_ES6.ts (1 errors) ====
    function f() {
        var { arguments } = { arguments: "hello" };
        if (Math.random()) {
            ~~~~
!!! error TS2304: Cannot find name 'Math'.
            return () => arguments[0];
        }
        var arguments = "world";
    }